js-temp/PqlParser.js
// Generated from grammar/PqlParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PqlParserListener = require('./PqlParserListener').PqlParserListener;
var PqlParserVisitor = require('./PqlParserVisitor').PqlParserVisitor;

var grammarFileName = "PqlParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "'?'", "'&&'", "'=='", "'>='", "'<='", 
                     "'!='", "'<>'", "'||'", "'<<'", "'>>'", "'&'", "'='", 
                     "')'", "','", "'.'", "'/'", "'>'", "'<'", "'-'", "'%'", 
                     "'('", "'|'", "'+'", "';'", "'*'", "'~'", "'_'" ];

var symbolicNames = [ null, "TAXON_TAG_DELIMITER", "TAXON_OPTIONAL_OPERATOR", 
                      "AND", "EQ", "GT_EQ", "LT_EQ", "NOT_EQ1", "NOT_EQ2", 
                      "OR", "SHIFT_LEFT", "SHIFT_RIGHT", "AMP", "ASSIGN", 
                      "CLOSE_PAREN", "COMMA", "DOT", "FORWARD_SLASH", "GT", 
                      "LT", "MINUS", "MOD", "OPEN_PAREN", "PIPE", "PLUS", 
                      "SCOL", "STAR", "TILDE", "UNDER", "K_AND", "K_ASC", 
                      "K_BY", "K_DESC", "K_FALSE", "K_IS", "K_ISNULL", "K_LIKE", 
                      "K_LIMIT", "K_NOT", "K_NOTNULL", "K_NULL", "K_OR", 
                      "K_ORDER", "K_SELECT", "K_TRUE", "K_WHERE", "NUMERIC_LITERAL", 
                      "DOUBLE_QUOTED_STRING", "DOUBLE_QUOTED_STRING_TEL", 
                      "DOUBLE_QUOTED_STRING_SQL", "SINGLE_QUOTED_STRING", 
                      "SINGLE_QUOTED_STRING_TEL", "SINGLE_QUOTED_STRING_SQL", 
                      "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", 
                      "WORD" ];

var ruleNames =  [ "parseTel", "parsePql", "sqlStmtList", "sqlStmt", "selectStmt", 
                   "columns", "whereClause", "orderByClause", "orderExpr", 
                   "limitClause", "expr", "taxon", "identifierMultipart", 
                   "literalValue" ];

function PqlParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PqlParser.prototype = Object.create(antlr4.Parser.prototype);
PqlParser.prototype.constructor = PqlParser;

Object.defineProperty(PqlParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PqlParser.EOF = antlr4.Token.EOF;
PqlParser.TAXON_TAG_DELIMITER = 1;
PqlParser.TAXON_OPTIONAL_OPERATOR = 2;
PqlParser.AND = 3;
PqlParser.EQ = 4;
PqlParser.GT_EQ = 5;
PqlParser.LT_EQ = 6;
PqlParser.NOT_EQ1 = 7;
PqlParser.NOT_EQ2 = 8;
PqlParser.OR = 9;
PqlParser.SHIFT_LEFT = 10;
PqlParser.SHIFT_RIGHT = 11;
PqlParser.AMP = 12;
PqlParser.ASSIGN = 13;
PqlParser.CLOSE_PAREN = 14;
PqlParser.COMMA = 15;
PqlParser.DOT = 16;
PqlParser.FORWARD_SLASH = 17;
PqlParser.GT = 18;
PqlParser.LT = 19;
PqlParser.MINUS = 20;
PqlParser.MOD = 21;
PqlParser.OPEN_PAREN = 22;
PqlParser.PIPE = 23;
PqlParser.PLUS = 24;
PqlParser.SCOL = 25;
PqlParser.STAR = 26;
PqlParser.TILDE = 27;
PqlParser.UNDER = 28;
PqlParser.K_AND = 29;
PqlParser.K_ASC = 30;
PqlParser.K_BY = 31;
PqlParser.K_DESC = 32;
PqlParser.K_FALSE = 33;
PqlParser.K_IS = 34;
PqlParser.K_ISNULL = 35;
PqlParser.K_LIKE = 36;
PqlParser.K_LIMIT = 37;
PqlParser.K_NOT = 38;
PqlParser.K_NOTNULL = 39;
PqlParser.K_NULL = 40;
PqlParser.K_OR = 41;
PqlParser.K_ORDER = 42;
PqlParser.K_SELECT = 43;
PqlParser.K_TRUE = 44;
PqlParser.K_WHERE = 45;
PqlParser.NUMERIC_LITERAL = 46;
PqlParser.DOUBLE_QUOTED_STRING = 47;
PqlParser.DOUBLE_QUOTED_STRING_TEL = 48;
PqlParser.DOUBLE_QUOTED_STRING_SQL = 49;
PqlParser.SINGLE_QUOTED_STRING = 50;
PqlParser.SINGLE_QUOTED_STRING_TEL = 51;
PqlParser.SINGLE_QUOTED_STRING_SQL = 52;
PqlParser.SINGLE_LINE_COMMENT = 53;
PqlParser.MULTILINE_COMMENT = 54;
PqlParser.SPACES = 55;
PqlParser.WORD = 56;

PqlParser.RULE_parseTel = 0;
PqlParser.RULE_parsePql = 1;
PqlParser.RULE_sqlStmtList = 2;
PqlParser.RULE_sqlStmt = 3;
PqlParser.RULE_selectStmt = 4;
PqlParser.RULE_columns = 5;
PqlParser.RULE_whereClause = 6;
PqlParser.RULE_orderByClause = 7;
PqlParser.RULE_orderExpr = 8;
PqlParser.RULE_limitClause = 9;
PqlParser.RULE_expr = 10;
PqlParser.RULE_taxon = 11;
PqlParser.RULE_identifierMultipart = 12;
PqlParser.RULE_literalValue = 13;


function ParseTelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_parseTel;
    return this;
}

ParseTelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParseTelContext.prototype.constructor = ParseTelContext;

ParseTelContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ParseTelContext.prototype.EOF = function() {
    return this.getToken(PqlParser.EOF, 0);
};

ParseTelContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterParseTel(this);
	}
};

ParseTelContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitParseTel(this);
	}
};

ParseTelContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitParseTel(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.ParseTelContext = ParseTelContext;

PqlParser.prototype.parseTel = function() {

    var localctx = new ParseTelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PqlParser.RULE_parseTel);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 28;
        this.expr(0);
        this.state = 29;
        this.match(PqlParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ParsePqlContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_parsePql;
    return this;
}

ParsePqlContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParsePqlContext.prototype.constructor = ParsePqlContext;

ParsePqlContext.prototype.EOF = function() {
    return this.getToken(PqlParser.EOF, 0);
};

ParsePqlContext.prototype.sqlStmtList = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SqlStmtListContext);
    } else {
        return this.getTypedRuleContext(SqlStmtListContext,i);
    }
};

ParsePqlContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterParsePql(this);
	}
};

ParsePqlContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitParsePql(this);
	}
};

ParsePqlContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitParsePql(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.ParsePqlContext = ParsePqlContext;

PqlParser.prototype.parsePql = function() {

    var localctx = new ParsePqlContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PqlParser.RULE_parsePql);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 34;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===PqlParser.SCOL || _la===PqlParser.K_SELECT) {
            this.state = 31;
            this.sqlStmtList();
            this.state = 36;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 37;
        this.match(PqlParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SqlStmtListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_sqlStmtList;
    return this;
}

SqlStmtListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SqlStmtListContext.prototype.constructor = SqlStmtListContext;

SqlStmtListContext.prototype.sqlStmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SqlStmtContext);
    } else {
        return this.getTypedRuleContext(SqlStmtContext,i);
    }
};

SqlStmtListContext.prototype.SCOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PqlParser.SCOL);
    } else {
        return this.getToken(PqlParser.SCOL, i);
    }
};


SqlStmtListContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterSqlStmtList(this);
	}
};

SqlStmtListContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitSqlStmtList(this);
	}
};

SqlStmtListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitSqlStmtList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.SqlStmtListContext = SqlStmtListContext;

PqlParser.prototype.sqlStmtList = function() {

    var localctx = new SqlStmtListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PqlParser.RULE_sqlStmtList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 42;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===PqlParser.SCOL) {
            this.state = 39;
            this.match(PqlParser.SCOL);
            this.state = 44;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 45;
        this.sqlStmt();
        this.state = 54;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 47; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    this.state = 46;
                    this.match(PqlParser.SCOL);
                    this.state = 49; 
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while(_la===PqlParser.SCOL);
                this.state = 51;
                this.sqlStmt(); 
            }
            this.state = 56;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

        this.state = 60;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 57;
                this.match(PqlParser.SCOL); 
            }
            this.state = 62;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SqlStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_sqlStmt;
    return this;
}

SqlStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SqlStmtContext.prototype.constructor = SqlStmtContext;

SqlStmtContext.prototype.selectStmt = function() {
    return this.getTypedRuleContext(SelectStmtContext,0);
};

SqlStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterSqlStmt(this);
	}
};

SqlStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitSqlStmt(this);
	}
};

SqlStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitSqlStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.SqlStmtContext = SqlStmtContext;

PqlParser.prototype.sqlStmt = function() {

    var localctx = new SqlStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, PqlParser.RULE_sqlStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.selectStmt();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SelectStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_selectStmt;
    return this;
}

SelectStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SelectStmtContext.prototype.constructor = SelectStmtContext;

SelectStmtContext.prototype.K_SELECT = function() {
    return this.getToken(PqlParser.K_SELECT, 0);
};

SelectStmtContext.prototype.columns = function() {
    return this.getTypedRuleContext(ColumnsContext,0);
};

SelectStmtContext.prototype.whereClause = function() {
    return this.getTypedRuleContext(WhereClauseContext,0);
};

SelectStmtContext.prototype.orderByClause = function() {
    return this.getTypedRuleContext(OrderByClauseContext,0);
};

SelectStmtContext.prototype.limitClause = function() {
    return this.getTypedRuleContext(LimitClauseContext,0);
};

SelectStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterSelectStmt(this);
	}
};

SelectStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitSelectStmt(this);
	}
};

SelectStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitSelectStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.SelectStmtContext = SelectStmtContext;

PqlParser.prototype.selectStmt = function() {

    var localctx = new SelectStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, PqlParser.RULE_selectStmt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 65;
        this.match(PqlParser.K_SELECT);
        this.state = 66;
        this.columns();
        this.state = 68;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PqlParser.K_WHERE) {
            this.state = 67;
            this.whereClause();
        }

        this.state = 71;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PqlParser.K_ORDER) {
            this.state = 70;
            this.orderByClause();
        }

        this.state = 74;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PqlParser.K_LIMIT) {
            this.state = 73;
            this.limitClause();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ColumnsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_columns;
    return this;
}

ColumnsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ColumnsContext.prototype.constructor = ColumnsContext;

ColumnsContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

ColumnsContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PqlParser.COMMA);
    } else {
        return this.getToken(PqlParser.COMMA, i);
    }
};


ColumnsContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterColumns(this);
	}
};

ColumnsContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitColumns(this);
	}
};

ColumnsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitColumns(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.ColumnsContext = ColumnsContext;

PqlParser.prototype.columns = function() {

    var localctx = new ColumnsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, PqlParser.RULE_columns);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.expr(0);
        this.state = 81;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===PqlParser.COMMA) {
            this.state = 77;
            this.match(PqlParser.COMMA);
            this.state = 78;
            this.expr(0);
            this.state = 83;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function WhereClauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_whereClause;
    return this;
}

WhereClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WhereClauseContext.prototype.constructor = WhereClauseContext;

WhereClauseContext.prototype.K_WHERE = function() {
    return this.getToken(PqlParser.K_WHERE, 0);
};

WhereClauseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

WhereClauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterWhereClause(this);
	}
};

WhereClauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitWhereClause(this);
	}
};

WhereClauseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitWhereClause(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.WhereClauseContext = WhereClauseContext;

PqlParser.prototype.whereClause = function() {

    var localctx = new WhereClauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, PqlParser.RULE_whereClause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(PqlParser.K_WHERE);
        this.state = 85;
        this.expr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function OrderByClauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_orderByClause;
    return this;
}

OrderByClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OrderByClauseContext.prototype.constructor = OrderByClauseContext;

OrderByClauseContext.prototype.K_ORDER = function() {
    return this.getToken(PqlParser.K_ORDER, 0);
};

OrderByClauseContext.prototype.K_BY = function() {
    return this.getToken(PqlParser.K_BY, 0);
};

OrderByClauseContext.prototype.orderExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OrderExprContext);
    } else {
        return this.getTypedRuleContext(OrderExprContext,i);
    }
};

OrderByClauseContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PqlParser.COMMA);
    } else {
        return this.getToken(PqlParser.COMMA, i);
    }
};


OrderByClauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterOrderByClause(this);
	}
};

OrderByClauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitOrderByClause(this);
	}
};

OrderByClauseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitOrderByClause(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.OrderByClauseContext = OrderByClauseContext;

PqlParser.prototype.orderByClause = function() {

    var localctx = new OrderByClauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, PqlParser.RULE_orderByClause);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this.match(PqlParser.K_ORDER);
        this.state = 88;
        this.match(PqlParser.K_BY);
        this.state = 89;
        this.orderExpr();
        this.state = 94;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===PqlParser.COMMA) {
            this.state = 90;
            this.match(PqlParser.COMMA);
            this.state = 91;
            this.orderExpr();
            this.state = 96;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function OrderExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_orderExpr;
    return this;
}

OrderExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OrderExprContext.prototype.constructor = OrderExprContext;

OrderExprContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

OrderExprContext.prototype.K_ASC = function() {
    return this.getToken(PqlParser.K_ASC, 0);
};

OrderExprContext.prototype.K_DESC = function() {
    return this.getToken(PqlParser.K_DESC, 0);
};

OrderExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterOrderExpr(this);
	}
};

OrderExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitOrderExpr(this);
	}
};

OrderExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitOrderExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.OrderExprContext = OrderExprContext;

PqlParser.prototype.orderExpr = function() {

    var localctx = new OrderExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, PqlParser.RULE_orderExpr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this.expr(0);
        this.state = 99;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PqlParser.K_ASC || _la===PqlParser.K_DESC) {
            this.state = 98;
            _la = this._input.LA(1);
            if(!(_la===PqlParser.K_ASC || _la===PqlParser.K_DESC)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function LimitClauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PqlParser.RULE_limitClause;
    this.limit = null; // ExprContext
    return this;
}

LimitClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LimitClauseContext.prototype.constructor = LimitClauseContext;

LimitClauseContext.prototype.K_LIMIT = function() {
    return this.getToken(PqlParser.K_LIMIT, 0);
};

LimitClauseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

LimitClauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.enterLimitClause(this);
	}
};

LimitClauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof PqlParserListener ) {
        listener.exitLimitClause(this);
	}
};

LimitClauseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PqlParserVisitor ) {
        return visitor.visitLimitClause(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PqlParser.LimitClauseContext = LimitClauseContext;

PqlParser.prototype.limitClause = function() {
